--- a/TZ3/TZ3.csproj
+++ b/TZ3/TZ3.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayOutput.cs" />
+    <Compile Include="Error.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="SelectionElements.cs" />
     <Compile Include="ArraySearch.cs" />
